tests/type-errors/decl_no_asset.arl
archetype decl_no_asset

asset my_asset {
  id : string;
}

variable a : my_asset = {id = "id"}

entry exec() {
  effect {
    require (true)
  }
}
